<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.SettingsActivity">


    <RelativeLayout
        android:id="@+id/rl_Header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp">

        <TextView
            android:id="@+id/tv_Head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/settings"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_Bck"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentLeft="true"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/vback" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/_15sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_Aboutus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="@dimen/_40sdp"
            android:padding="@dimen/_10sdp"
            android:text="@string/aboutus"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:id="@+id/tv_Contactus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:gravity="center"
            android:minHeight="@dimen/_40sdp"
            android:padding="@dimen/_10sdp"
            android:text="@string/contactus"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:id="@+id/tv_Privacy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center"
            android:minHeight="@dimen/_40sdp"
            android:padding="@dimen/_10sdp"
            android:text="@string/privacypolicy"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:src="@drawable/setting" />

</LinearLayout>