<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Activities.ContactUsActivity">

    <RelativeLayout
        android:id="@+id/rl_Header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp">

        <TextView
            android:id="@+id/tv_Head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/contactus"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_Bck"
            android:layout_width="@dimen/_40sdp"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentLeft="true"
            android:padding="@dimen/_10sdp"
            android:src="@drawable/vback" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_30sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:adjustViewBounds="true"
            android:src="@drawable/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/contactusmsg"
        android:textColor="#5CE1E6"
        android:textSize="@dimen/_18sdp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_Mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email: Amoozesh.info@gmail.com"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/tv_FB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:text="Facebook: facebook.com/Amoozesh"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/tv_Insta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:text="Instagram: instagram.com/Amoozesh"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />

        <TextView
            android:id="@+id/tv_Twiter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_3sdp"
            android:text="Twitter: twitter.com/Amoozesh"
            android:textColor="@color/black"
            android:textSize="@dimen/_15sdp" />

    </LinearLayout>


</LinearLayout>